--- a/index.html
+++ b/index.html
@@ -1925,10 +1925,10 @@
               <a href="#">
               <h5>Top Free to Play</h5>
               <span style="width: 24px; height: 24px; margin-left: 5px;">
-                <svg fill="#fff" aria-hidden="""true" class="""eds_5nt5ak0 eds_5nt5aka css-1y8mdod" width="""24" height="""24"
-                viewBox="""0 0 24 24"></svg>
+                <svg fill="#fff" aria-hidden="true" class="eds_5nt5ak0 eds_5nt5aka css-1y8mdod" width="24" height="24"
+                viewBox="0 0 24 24">
                 <path
-                  d="""M8.97 4.47a.75.75 0 0 1 1.06 0L17.56 12l-7.53 7.53a.75.75 0 1 1-1.06-1.06L15.44 12 8.97 5.53a.75.75 0 0 1 0-1.06"
+                  d="M8.97 4.47a.75.75 0 0 1 1.06 0L17.56 12l-7.53 7.53a.75.75 0 1 1-1.06-1.06L15.44 12 8.97 5.53a.75.75 0 0 1 0-1.06"
                   clip-rule="evenodd" fill-rule="evenodd"></path>
                 </svg>
               </span>
